<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ComicWatcher</string>
    <string name="add_item_title">新規追加</string>
    <string name="item_detail_title">シリーズ詳細</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_add">Add</string>
    <string name="menu_remove">リストから削除</string>
    <string name="menu_purchase">購入ページへ</string>
    <string name="menu_follow">このシリーズをフォロー</string>
    <string name="menu_unfollow">このシリーズを削除</string>
    <string name="menu_saved">フォローしています</string>
    <string name="search_title">タイトルを入力してください</string>
    <string name="txt_series_num">%d巻</string>
    <string name="txt_series_ihave_num">%d</string>
    <string name="txt_scheduled_date">%s 発売予定</string>
    <string name="txt_not_scheduled">新刊発売予定はありません</string>
    <string name="txt_release_date">%s</string>
    <string name="txt_non_reserved">未予約</string>
    <string name="txt_reserved">予約済</string>
    <string name="txt_ihave">持ってる</string>
    <string name="txt_ihaveall">全巻持ってる</string>
    <string name="btn_ihaveall">全巻持ってる</string>
    <string name="btn_reserve">%s巻を予約する</string>
</resources>