<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_list_background"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/txt_detail_series_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="12dp"
        android:text="@string/txt_series_num"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/gray_dark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_detail_scheduled_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minHeight="24dp"
        android:minWidth="24dp"
        android:paddingBottom="4dp"
        android:paddingRight="8dp"
        android:paddingTop="4dp"
        android:text="@string/txt_scheduled_date"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/gray_normal" />

    <CheckBox
        android:id="@+id/checkBox_reserved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="12dp"
        android:text="@string/txt_reserved"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/green_normal"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/checkBox_haved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_haved"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/gray_dark"
        android:textStyle="bold"
        android:visibility="gone" />

</LinearLayout>